[FIX] mail: discuss style improvement message/border/avatar
Message style improvements:
- author name is slightly smaller
- squashed message are slightly closer to previous message
- border around message bubble has opacity reduced

Borders:
- reduced/removed borders around discuss sidebar/header/panel
- header thread action have border replaced by bg color

Avatar
- avatar are rounder (`.rounded` => `.rounded-3`)

NotificationMessage
- slightly reduced opacity

--- a/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
+++ b/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
@@ -81,6 +81,8 @@ $o-mail-DiscussSidebarChannel-borderOpacity: .05;
 }
 
 .o-mail-DiscussSidebarCategories-search {
+    --border-opacity: .5;
+
     &, & input {
         background-color: $o-view-background-color !important;
     }
